# Hash_code

./: README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: coverage.yml  documentation_pages.yml
UML/: uml_diagram.mdj
docs/: conf.py  index.rst
hash_code/: Binary.py  Engineer.py  Feature.py  ObjectsStructure.py  Schedule.py  Service.py  Task.py
tests/: solution.txt  test_schedule.py
