[tool.poetry]
name = "hash-code"
version = "0.1.0"
description = ""
authors = ["Naloween <40539093+Naloween@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hash_code"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
