[tool.poetry]
name = "hash-code"
version = "0.1.0"
description = ""
authors = ["Naloween <40539093+Naloween@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hash_code"}]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
